初始化element流程

--- a/example/helloword/index.html
+++ b/example/helloword/index.html
@@ -7,6 +7,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+<style>
+  .red {
+    color: red;
+
+  }
+
+  .blue {
+    color: blue;
+  }
+
+  .grey {
+    color: gray;
+  }
+</style>
 
 <body>
   <div id="app"></div>
